--- a/sfm-test-kotlin/pom.xml
+++ b/sfm-test-kotlin/pom.xml
@@ -1,157 +1,286 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-	<modelVersion>4.0.0</modelVersion>
+<?xml version="1.0" encoding="UTF-8"?><project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+    	
+    <modelVersion>4.0.0</modelVersion>
+    	
+    <groupId>org.simpleflatmapper</groupId>
+    	
+    <artifactId>sfm-test-kotlin-jre9</artifactId>
+    	
+    <packaging>jar</packaging>
+    	
+    <version>8.2.2-SNAPSHOT</version>
+    	
+    <licenses>
+        		
+        <license>
+            			
+            <name>The MIT License (MIT)</name>
+            			
+            <url>http://opensource.org/licenses/MIT</url>
+            			
+            <distribution>repo</distribution>
+            		
+        </license>
+        	
+    </licenses>
+    	
+    <properties>
+        	    
+        <kotlin.version>1.2.21</kotlin.version>
+        		
+        <junit.version>4.12</junit.version>
+        	
+    </properties>
+    	
+    <build>
+            
+        <sourceDirectory>${project.basedir}/src/main/kotlin</sourceDirectory>
+            
+        <testSourceDirectory>${project.basedir}/src/test/kotlin</testSourceDirectory>
+        		
+        <plugins>
+                    
+            <plugin>
+                            
+                <artifactId>kotlin-maven-plugin</artifactId>
+                            
+                <groupId>org.jetbrains.kotlin</groupId>
+                            
+                <version>${kotlin.version}</version>
+                            
+                <executions>
+                                    
+                    <execution>
+                                            
+                        <id>compile</id>
+                                            
+                        <goals>
+                             
+                            <goal>compile</goal>
+                             
+                        </goals>
+                                        
+                    </execution>
+                                    
+                    <execution>
+                                            
+                        <id>test-compile</id>
+                                            
+                        <goals>
+                             
+                            <goal>test-compile</goal>
+                             
+                        </goals>
+                                        
+                    </execution>
+                                
+                </executions>
+                        
+            </plugin>
+            			
 
-	<groupId>org.simpleflatmapper</groupId>
-	<artifactId>sfm-test-kotlin</artifactId>
-	<packaging>jar</packaging>
-
-	<version>8.2.2-SNAPSHOT</version>
-
-	<licenses>
-		<license>
-			<name>The MIT License (MIT)</name>
-			<url>http://opensource.org/licenses/MIT</url>
-			<distribution>repo</distribution>
-		</license>
-	</licenses>
-
-	<properties>
-	    <kotlin.version>1.2.21</kotlin.version>
-		<junit.version>4.12</junit.version>
-
-	</properties>
-
-	<build>
-    <sourceDirectory>${project.basedir}/src/main/kotlin</sourceDirectory>
-    <testSourceDirectory>${project.basedir}/src/test/kotlin</testSourceDirectory>
-		<plugins>
-        <plugin>
-            <artifactId>kotlin-maven-plugin</artifactId>
+		
+        </plugins>
+        	
+    </build>
+    	
+    <dependencies>
+        		
+        <dependency>
+            			
+            <groupId>org.simpleflatmapper</groupId>
+            			
+            <artifactId>sfm-csv-jre9</artifactId>
+            			
+            <version>8.2.2-SNAPSHOT</version>
+            		
+        </dependency>
+        		
+        <dependency>
+            			
+            <groupId>org.simpleflatmapper</groupId>
+            			
+            <artifactId>sfm-jdbc-jre9</artifactId>
+            			
+            <version>8.2.2-SNAPSHOT</version>
+            		
+        </dependency>
+        		
+        <dependency>
+            			
+            <groupId>com.h2database</groupId>
+            			
+            <artifactId>h2</artifactId>
+            			
+            <version>1.4.198</version>
+            		
+        </dependency>
+        		
+        <dependency>
+            			
             <groupId>org.jetbrains.kotlin</groupId>
+            			
+            <artifactId>kotlin-stdlib-jdk8</artifactId>
+            			
             <version>${kotlin.version}</version>
-
-            <executions>
-                <execution>
-                    <id>compile</id>
-                    <goals> <goal>compile</goal> </goals>
-                </execution>
-
-                <execution>
-                    <id>test-compile</id>
-                    <goals> <goal>test-compile</goal> </goals>
-                </execution>
-            </executions>
-        </plugin>
-
-			
-
-		</plugins>
-	</build>
-
-	<dependencies>
-		<dependency>
-			<groupId>org.simpleflatmapper</groupId>
-			<artifactId>sfm-csv</artifactId>
-			<version>8.2.2-SNAPSHOT</version>
-		</dependency>
-		<dependency>
-			<groupId>org.simpleflatmapper</groupId>
-			<artifactId>sfm-jdbc</artifactId>
-			<version>8.2.2-SNAPSHOT</version>
-		</dependency>
-		<dependency>
-			<groupId>com.h2database</groupId>
-			<artifactId>h2</artifactId>
-			<version>1.4.198</version>
-		</dependency>
-		<dependency>
-			<groupId>org.jetbrains.kotlin</groupId>
-			<artifactId>kotlin-stdlib-jdk8</artifactId>
-			<version>${kotlin.version}</version>
-    	</dependency>
-		<dependency>
-			<groupId>org.jetbrains.kotlin</groupId>
-			<artifactId>kotlin-reflect</artifactId>
-			<version>${kotlin.version}</version>
-		</dependency>
-		<dependency>
-			<groupId>junit</groupId>
-			<artifactId>junit</artifactId>
-			<version>${junit.version}</version>
-			<scope>test</scope>
-		</dependency>
-
-		<dependency>
-			<groupId>org.jetbrains.kotlin</groupId>
-			<artifactId>kotlin-stdlib</artifactId>
-			<version>${kotlin.version}</version>
-		</dependency>
-
-		<dependency>
-			<groupId>org.jetbrains.kotlin</groupId>
-			<artifactId>kotlin-test-junit</artifactId>
-			<version>${kotlin.version}</version>
-			<scope>test</scope>
-		</dependency>
-	</dependencies>
-
-	<profiles>
-		<profile>
-			<id>jdk16</id>
-			<activation>
-				<jdk>1.6</jdk>
-			</activation>
-			<properties>
+                	
+        </dependency>
+        		
+        <dependency>
+            			
+            <groupId>org.jetbrains.kotlin</groupId>
+            			
+            <artifactId>kotlin-reflect</artifactId>
+            			
+            <version>${kotlin.version}</version>
+            		
+        </dependency>
+        		
+        <dependency>
+            			
+            <groupId>junit</groupId>
+            			
+            <artifactId>junit</artifactId>
+            			
+            <version>${junit.version}</version>
+            			
+            <scope>test</scope>
+            		
+        </dependency>
+        		
+        <dependency>
+            			
+            <groupId>org.jetbrains.kotlin</groupId>
+            			
+            <artifactId>kotlin-stdlib</artifactId>
+            			
+            <version>${kotlin.version}</version>
+            		
+        </dependency>
+        		
+        <dependency>
+            			
+            <groupId>org.jetbrains.kotlin</groupId>
+            			
+            <artifactId>kotlin-test-junit</artifactId>
+            			
+            <version>${kotlin.version}</version>
+            			
+            <scope>test</scope>
+            		
+        </dependency>
+        	
+    </dependencies>
+    	
+    <profiles>
+        		
+        <profile>
+            			
+            <id>jdk16</id>
+            			
+            <activation>
+                				
+                <jdk>1.6</jdk>
+                			
+            </activation>
+            			
+            <properties>
 			</properties>
-		</profile>
-		<profile>
-			<id>jdk17</id>
-			<activation>
-				<jdk>1.7</jdk>
-			</activation>
-			<properties>
+            		
+        </profile>
+        		
+        <profile>
+            			
+            <id>jdk17</id>
+            			
+            <activation>
+                				
+                <jdk>1.7</jdk>
+                			
+            </activation>
+            			
+            <properties>
 			</properties>
-		</profile>
-
-		<profile>
-			<id>jdk19</id>
-			<activation>
-				<jdk>[9,12]</jdk>
-			</activation>
-			<properties>
+            		
+        </profile>
+        		
+        <profile>
+            			
+            <id>jdk19</id>
+            			
+            <activation>
+                				
+                <jdk>[9,12]</jdk>
+                			
+            </activation>
+            			
+            <properties>
 			</properties>
-			<build>
-				<plugins>
-					<plugin>
-						<groupId>org.apache.maven.plugins</groupId>
-						<artifactId>maven-compiler-plugin</artifactId>
-						<version>3.6.0</version>
-						<configuration>
-							<source>9</source>
-							<target>9</target>
-							<fork>true</fork>
-							<compilerArgs>
-								<arg>-J-XaddExports:jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED</arg>
-								<arg>-J-XaddExports:jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED</arg>
-								<arg>-J-XaddExports:jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED</arg>
-								<arg>-J-XaddExports:jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED</arg>
-								<arg>-J-XaddExports:jdk.compiler/com.sun.tools.javac.model=ALL-UNNAMED</arg>
-								<arg>-J-XaddExports:jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED</arg>
-								<arg>-J-XaddExports:jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED</arg>
-								<arg>-J-XaddExports:jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED</arg>
-							</compilerArgs>
-						</configuration>
-						<dependencies>
-							<dependency>
-								<groupId>org.ow2.asm</groupId>
-								<artifactId>asm</artifactId>
-								<version>6.0_ALPHA</version>
-							</dependency>
-						</dependencies>
-					</plugin>
-				</plugins>
-			</build>
-		</profile>
-
-	</profiles>
+            			
+            <build>
+                				
+                <plugins>
+                    					
+                    <plugin>
+                        						
+                        <groupId>org.apache.maven.plugins</groupId>
+                        						
+                        <artifactId>maven-compiler-plugin</artifactId>
+                        						
+                        <version>3.6.0</version>
+                        						
+                        <configuration>
+                            							
+                            <source>9</source>
+                            							
+                            <target>9</target>
+                            							
+                            <fork>true</fork>
+                            							
+                            <compilerArgs>
+                                								
+                                <arg>-J-XaddExports:jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED</arg>
+                                								
+                                <arg>-J-XaddExports:jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED</arg>
+                                								
+                                <arg>-J-XaddExports:jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED</arg>
+                                								
+                                <arg>-J-XaddExports:jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED</arg>
+                                								
+                                <arg>-J-XaddExports:jdk.compiler/com.sun.tools.javac.model=ALL-UNNAMED</arg>
+                                								
+                                <arg>-J-XaddExports:jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED</arg>
+                                								
+                                <arg>-J-XaddExports:jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED</arg>
+                                								
+                                <arg>-J-XaddExports:jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED</arg>
+                                							
+                            </compilerArgs>
+                            						
+                        </configuration>
+                        						
+                        <dependencies>
+                            							
+                            <dependency>
+                                								
+                                <groupId>org.ow2.asm</groupId>
+                                								
+                                <artifactId>asm</artifactId>
+                                								
+                                <version>6.0_ALPHA</version>
+                                							
+                            </dependency>
+                            						
+                        </dependencies>
+                        					
+                    </plugin>
+                    				
+                </plugins>
+                			
+            </build>
+            		
+        </profile>
+        	
+    </profiles>
+    
 </project>
