--- a/sfm-test-lombok/pom.xml
+++ b/sfm-test-lombok/pom.xml
@@ -1,118 +1,209 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-	<modelVersion>4.0.0</modelVersion>
-
-	<groupId>org.simpleflatmapper</groupId>
-	<artifactId>sfm-test-lombok</artifactId>
-	<packaging>jar</packaging>
-
-	<version>8.2.2-SNAPSHOT</version>
-
-	<licenses>
-		<license>
-			<name>The MIT License (MIT)</name>
-			<url>http://opensource.org/licenses/MIT</url>
-			<distribution>repo</distribution>
-		</license>
-	</licenses>
-
-	<properties>
+<?xml version="1.0" encoding="UTF-8"?><project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+    	
+    <modelVersion>4.0.0</modelVersion>
+    	
+    <groupId>org.simpleflatmapper</groupId>
+    	
+    <artifactId>sfm-test-lombok-jre9</artifactId>
+    	
+    <packaging>jar</packaging>
+    	
+    <version>8.2.2-SNAPSHOT</version>
+    	
+    <licenses>
+        		
+        <license>
+            			
+            <name>The MIT License (MIT)</name>
+            			
+            <url>http://opensource.org/licenses/MIT</url>
+            			
+            <distribution>repo</distribution>
+            		
+        </license>
+        	
+    </licenses>
+    	
+    <properties>
 	</properties>
-
-	<build>
-		<plugins>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-compiler-plugin</artifactId>
-				<version>3.3</version>
-				<configuration>
-					<source>1.8</source>
-					<target>1.8</target>
-				</configuration>
-			</plugin>
-
-		</plugins>
-	</build>
-
-	<dependencies>
-		<dependency>
-			<groupId>org.simpleflatmapper</groupId>
-			<artifactId>sfm-csv</artifactId>
-			<version>8.2.2-SNAPSHOT</version>
-		</dependency>
-		<dependency>
-			<groupId>org.simpleflatmapper</groupId>
-			<artifactId>sfm-jdbc</artifactId>
-			<version>8.2.2-SNAPSHOT</version>
-		</dependency>
-		<dependency>
-			<groupId>org.simpleflatmapper</groupId>
-			<artifactId>sfm-test</artifactId>
-			<version>8.2.2-SNAPSHOT</version>
-		</dependency>
-		<dependency>
-			<groupId>org.projectlombok</groupId>
-			<artifactId>lombok</artifactId>
-			<version>1.18.6</version>
-			<scope>provided</scope>
-		</dependency>
-
-		<dependency>
-			<groupId>junit</groupId>
-			<artifactId>junit</artifactId>
-			<version>4.12</version>
-			<scope>test</scope>
-		</dependency>
-	</dependencies>
-
-	<profiles>
-		<profile>
-			<id>jdk16</id>
-			<activation>
-				<jdk>1.6</jdk>
-			</activation>
-			<properties>
+    	
+    <build>
+        		
+        <plugins>
+            			
+            <plugin>
+                				
+                <groupId>org.apache.maven.plugins</groupId>
+                				
+                <artifactId>maven-compiler-plugin</artifactId>
+                				
+                <version>3.3</version>
+                				
+                <configuration>
+                    					
+                    <source>1.8</source>
+                    					
+                    <target>1.8</target>
+                    				
+                </configuration>
+                			
+            </plugin>
+            		
+        </plugins>
+        	
+    </build>
+    	
+    <dependencies>
+        		
+        <dependency>
+            			
+            <groupId>org.simpleflatmapper</groupId>
+            			
+            <artifactId>sfm-csv-jre9</artifactId>
+            			
+            <version>8.2.2-SNAPSHOT</version>
+            		
+        </dependency>
+        		
+        <dependency>
+            			
+            <groupId>org.simpleflatmapper</groupId>
+            			
+            <artifactId>sfm-jdbc-jre9</artifactId>
+            			
+            <version>8.2.2-SNAPSHOT</version>
+            		
+        </dependency>
+        		
+        <dependency>
+            			
+            <groupId>org.simpleflatmapper</groupId>
+            			
+            <artifactId>sfm-test-jre9</artifactId>
+            			
+            <version>8.2.2-SNAPSHOT</version>
+            		
+        </dependency>
+        		
+        <dependency>
+            			
+            <groupId>org.projectlombok</groupId>
+            			
+            <artifactId>lombok</artifactId>
+            			
+            <version>1.18.6</version>
+            			
+            <scope>provided</scope>
+            		
+        </dependency>
+        		
+        <dependency>
+            			
+            <groupId>junit</groupId>
+            			
+            <artifactId>junit</artifactId>
+            			
+            <version>4.12</version>
+            			
+            <scope>test</scope>
+            		
+        </dependency>
+        	
+    </dependencies>
+    	
+    <profiles>
+        		
+        <profile>
+            			
+            <id>jdk16</id>
+            			
+            <activation>
+                				
+                <jdk>1.6</jdk>
+                			
+            </activation>
+            			
+            <properties>
 			</properties>
-		</profile>
-		<profile>
-			<id>jdk17</id>
-			<activation>
-				<jdk>1.7</jdk>
-			</activation>
-			<properties>
+            		
+        </profile>
+        		
+        <profile>
+            			
+            <id>jdk17</id>
+            			
+            <activation>
+                				
+                <jdk>1.7</jdk>
+                			
+            </activation>
+            			
+            <properties>
 			</properties>
-		</profile>
-
-		<profile>
-			<id>jdk19</id>
-			<activation>
-				<jdk>[9,12]</jdk>
-			</activation>
-			<properties>
+            		
+        </profile>
+        		
+        <profile>
+            			
+            <id>jdk19</id>
+            			
+            <activation>
+                				
+                <jdk>[9,12]</jdk>
+                			
+            </activation>
+            			
+            <properties>
 			</properties>
-			<build>
-				<plugins>
-					<plugin>
-						<groupId>org.apache.maven.plugins</groupId>
-						<artifactId>maven-compiler-plugin</artifactId>
-						<version>3.6.0</version>
-						<configuration>
-							<source>9</source>
-							<target>9</target>
-							<fork>true</fork>
-							<optimise>true</optimise>
-							<parameters>false</parameters>
-						</configuration>
-						<dependencies>
-							<dependency>
-								<groupId>org.ow2.asm</groupId>
-								<artifactId>asm</artifactId>
-								<version>7.0</version>
-							</dependency>
-						</dependencies>
-					</plugin>
-				</plugins>
-			</build>
-		</profile>
-
-	</profiles>
+            			
+            <build>
+                				
+                <plugins>
+                    					
+                    <plugin>
+                        						
+                        <groupId>org.apache.maven.plugins</groupId>
+                        						
+                        <artifactId>maven-compiler-plugin</artifactId>
+                        						
+                        <version>3.6.0</version>
+                        						
+                        <configuration>
+                            							
+                            <source>9</source>
+                            							
+                            <target>9</target>
+                            							
+                            <fork>true</fork>
+                            							
+                            <optimise>true</optimise>
+                            							
+                            <parameters>false</parameters>
+                            						
+                        </configuration>
+                        						
+                        <dependencies>
+                            							
+                            <dependency>
+                                								
+                                <groupId>org.ow2.asm</groupId>
+                                								
+                                <artifactId>asm</artifactId>
+                                								
+                                <version>7.0</version>
+                                							
+                            </dependency>
+                            						
+                        </dependencies>
+                        					
+                    </plugin>
+                    				
+                </plugins>
+                			
+            </build>
+            		
+        </profile>
+        	
+    </profiles>
+    
 </project>
