--- a/sfm-jdbc/pom.xml
+++ b/sfm-jdbc/pom.xml
@@ -7,7 +7,7 @@
 	<parent>
 		<groupId>org.simpleflatmapper</groupId>
 		<artifactId>sfm-parent-jre6</artifactId>
-		<version>8.2.3-SNAPSHOT</version>
+		<version>8.2.3</version>
 	</parent>
 
 	<name>sfm-jdbc</name>
@@ -34,7 +34,7 @@
 		<dependency>
 			<groupId>org.simpleflatmapper</groupId>
 			<artifactId>sfm-map-jre6</artifactId>
-			<version>8.2.3-SNAPSHOT</version>
+			<version>8.2.3</version>
 		</dependency>
 
 		<dependency>
@@ -51,26 +51,26 @@
 		<dependency>
 			<groupId>org.simpleflatmapper</groupId>
 			<artifactId>sfm-test-jre6</artifactId>
-			<version>8.2.3-SNAPSHOT</version>
+			<version>8.2.3</version>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.simpleflatmapper</groupId>
 			<artifactId>sfm-map-jre6</artifactId>
-			<version>8.2.3-SNAPSHOT</version>
+			<version>8.2.3</version>
 			<scope>test</scope>
 			<classifier>tests</classifier>
 		</dependency>
 		<dependency>
 			<groupId>org.simpleflatmapper</groupId>
 			<artifactId>sfm-tuples-jre6</artifactId>
-			<version>8.2.3-SNAPSHOT</version>
+			<version>8.2.3</version>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.simpleflatmapper</groupId>
 			<artifactId>sfm-converter-joda-time-jre6</artifactId>
-			<version>8.2.3-SNAPSHOT</version>
+			<version>8.2.3</version>
 			<scope>test</scope>
 		</dependency>
 
